fix: horizontal scroll bar and footer extra margin

--- a/src/app/_samples/mediaco/components/footer/footer.component.scss
+++ b/src/app/_samples/mediaco/components/footer/footer.component.scss
@@ -9,7 +9,6 @@
   background-color: rgb(247, 242, 250);
   color: #333;
   padding: 30px 0;
-  margin-left: 1rem;
 }
 
 .footer-container {
